# question-bank

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  justfile  pyproject.toml  run.py  run.spec
backend/alembic/: env.py
backend/alembic/versions/: 077c86f6cd53_add_audit_fields_and_activity_log.py  22915b61a20a_add_question_parent_child.py  5b0a12690d01_add_subject_required_review_count.py  72b8e310399b_dual_db_baseline.py  72f41c888c6a_add_import_tasks.py  7974f62230b9_add_review_count_and_logs.py  830cc1d218ea_add_subject_id_to_question.py  a19fc2f7b6d0_add_cancelled_status.py  b31bcd4d8888_merge_heads.py  c7ae97d0807a_add_cascade_delete_to_knowledge_points.py  de7ac09ca530_add_user_login_stats.py  eb5a35a0d6ca_add_deleted_at_to_question.py  f02a7f680a4b_update_question_type_enum.py  (+1 more)
backend/app/: _version.py  branding.py  main.py  tray.py  worker.py
backend/app/api/: deps.py
backend/scripts/: check_chroma_recent.py  check_fill_in_blank_answers.py  check_import_batch.py  check_question_subject.py  check_questions_task.py  check_tables.py  cleanup_test_questions.py  clear_all_questions.py  clear_chroma.py  clear_import_tasks.py  compare_embeddings.py  create_superuser.py  create_test_questions.py  fix_fill_in_blank_answers.py  fix_fill_in_blank_latex.py  fix_null_booleans.py  fix_question_options.py  fix_question_types_direct.py  import_math_knowledge_points.py  initial_data.py  inspect_excel.py  sync_knowledge_points.py  test_crud_filter.py
(+200 files in other folders)
